[package]
name = "dir_tree"
version = "0.1.1"
edition = "2021"
description = "Walk a directory and convert to json object"
license = "MIT"
authors = ["Saksham Goyal <sakgoy2001@gmail.com>"]
repository = "https://github.com/sakgoyal/dir_tree"
keywords = ["tree", "fs", "json", "walk", "dir"]
categories = ["filesystem"]


[dependencies]
serde_json = "1.0.118"
walkdir = "2.5.0"

[lints.rust]
unsafe_code = "forbid"
