[package]
name = "dir_tree"
version = "0.1.4"
edition = "2021"
description = "Walk a directory and convert to json object"
license = "MIT"
authors = ["Saksham Goyal <sakgoy2001@gmail.com>"]
repository = "https://github.com/sakgoyal/dir_tree"
keywords = ["tree", "fs", "json", "walk", "dir"]
categories = ["filesystem"]

# [lib]
# name = "foo"           # The name of the target.
# path = "src/lib.rs"    # The source file of the target.
# crate-type = ["lib"]

[dependencies]
walkdir = "2.5.0"

[dev-dependencies]
serde_json = "1.0.118"

[lints.rust]
unsafe_code = "forbid"
